--- a/h02/index.html
+++ b/h02/index.html
@@ -10,8 +10,15 @@
         <h1>Bellen blazen</h1>
         <div class="buttons">
             <a href="index.html"><button>Home</button></a>
-            <a href="page2.html"><button>pagina 2</button></a>
+            <a href="page2.html"><button>Recept</button></a>
         </div>
     </header>
+
+    <div class="images">
+        <center>
+            <img src="images/zeepbel.jpg">
+            <img src="images/nogeenbel.jpg">
+        </center>
+    </div>
 </body>
 </html>
