--- a/h02/page2.html
+++ b/h02/page2.html
@@ -2,9 +2,27 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Bellen blazen - pagina 2</title>
+    <title>Bellen blazen - Recept</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
-
+    <header>
+        <h1>Bellen blazen</h1>
+        <div class="buttons">
+            <a href="index.html"><button>Home</button></a>
+            <a href="page2.html"><button>Recept</button></a>
+        </div>
+    </header>
+    <div class="tekst">
+        <center>
+            <h3>Het recept om zelf  bellenblaas te maken</h3>
+            <p>
+                1 kop warm water<br>
+                2 eetlepels suiker<br>
+                2 eetlepels wasmiddel<br>
+                Los de suiker op in het water. Voeg het afwasmiddel toe en roer voorzichtig door.
+            </p>
+        </center>
+    </div>
 </body>
 </html>
