--- a/h02/page2.html
+++ b/h02/page2.html
@@ -24,5 +24,11 @@
             </p>
         </center>
     </div>
+    <table>
+        <ol>
+            <li><a href="https://www.bol.com/nl/l/bellenblaas/N/20179/" target="_blank">Kopen</a></li>
+            <li><a href="https://nl.wikipedia.org/wiki/Bellenblaas" target="_blank">Wikipedia</a></li>
+        </ol>
+    </table>
 </body>
 </html>
