--- a/h05/index.html
+++ b/h05/index.html
@@ -15,21 +15,19 @@
             <a>Contact</a>
         </nav>
 
-        <div class="images">
-            <section class="inline">
+        <section class="image">
 
-                <img src="img/appel.jpg">
+            <img src="img/appel.jpg">
 
-            </section>
+        </section>
 
-            <section class="block">
+        <section class="imagestack">
 
-                <img src="img/bus.jpg">
-                <img src="img/desk.jpg">
-                <img src="img/pythagoras.jpg">
+            <img src="img/bus.jpg">
+            <img src="img/desk.jpg">
+            <img src="img/pythagoras.jpg">
 
-            </section>
-        </div>
+        </section>
 
         <section>
             <article></article>
