--- a/h05/index.html
+++ b/h05/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <header>
-            <img src="img/burton_logo.png">
+            <img src="img/burton_logo.png" alt="Logo">
         </header>
         <nav>
             <a>Over Ons</a>
@@ -17,22 +17,34 @@
 
         <section class="image">
 
-            <img src="img/appel.jpg">
+            <img src="img/appel.jpg" alt="appel">
 
         </section>
 
         <section class="imagestack">
 
-            <img src="img/bus.jpg">
-            <img src="img/desk.jpg">
-            <img src="img/pythagoras.jpg">
+            <img src="img/bus.jpg" alt="bus">
+            <img src="img/desk.jpg" alt="tafel">
+            <img src="img/pythagoras.jpg" alt="pythagoras">
 
         </section>
 
-        <section>
-            <article></article>
-            <article></article>
-            <article></article>
+        <section class="articles">
+            <article>
+                <p>
+                    aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
+                </p>
+            </article>
+            <article>
+                <p>
+                    aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
+                </p>
+            </article>
+            <article>
+                <p>
+                    aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
+                </p>
+            </article>
         </section>
     </body>
 </html>
