--- a/h05/index.html
+++ b/h05/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Title</title>
+        <title>Burton Education</title>
         <link rel="stylesheet" href="index.css">
     </head>
     <body>
@@ -30,21 +30,24 @@
         </section>
 
         <section class="articles">
-            <article>
-                <p>
-                    aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
-                </p>
-            </article>
-            <article>
-                <p>
-                    aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
-                </p>
-            </article>
-            <article>
-                <p>
-                    aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
-                </p>
-            </article>
+            <div class="grid">
+                <article>
+                    <h1>Titel</h1>
+                    <p>
+                        aaaaaaaaaaaaaaaa aaaaaaaaaaaaaaaa
+                    </p>
+                </article>
+                <article>
+                    <p>
+                        bbbbbbbbbbbbbbbb bbbbbbbbbbbbbbbb
+                    </p>
+                </article>
+                <article>
+                    <p>
+                        cccccccccccccccc cccccccccccccccc
+                    </p>
+                </article>
+            </div>
         </section>
     </body>
 </html>
