--- a/h05-06/index.html
+++ b/h05-06/index.html
@@ -13,6 +13,7 @@
             <a>Over Ons</a>
             <a>Producten</a>
             <a>Contact</a>
+            <a href="login.html">Login</a>
         </nav>
 
         <section class="image">
